
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef size_t USHORT ;
struct TYPE_2__ {scalar_t__ usCurY; scalar_t__ usCurX; } ;


 TYPE_1__* wWindow ;

void Home(USHORT Window)
{
 wWindow[Window].usCurX=0;
    wWindow[Window].usCurY=0;

}
